# physics-playground

./: Makefile.am  Makefile.in  configure  configure.ac  toy_impact.nb
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  common.h  display-area.cc  display-area.h  edge.cc  edge.h  main.cc  math-common.cc  math-common.h  model.cc  model.h  particle.cc  particle.h  spatial-object.cc  spatial-object.h
